removed button after winner is decided, removed a bug from home page, updated mobile css for more spacing between cards

--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,9 @@ header .loader {
 }
 
 @media only screen and (max-width: 600px) {
+  .card {
+    margin-top: 10px;
+  }
   .card:hover {
     transform: none;
   }
